--- a/index.qmd
+++ b/index.qmd
@@ -5,20 +5,25 @@ execute:
   enabled: false
 institute: Senior Research Software Engineer, IT Services (University of Warwick)
 format: 
-    revealjs:
+    revealjs:  
         theme: [default, css/warwick.scss, css/warwick-fonts.scss]
         footer: https://jamestripp.github.io/DTC-CDI-Intro-2022 /
         transition: none
         background-transition: fade
+bibliography: references.bib
 ---
+
+# Centre for Digital Inquiry {background-color="#552d62"}
 
 ## CDI
 
 "We use and develop digital research techniques and associated tools to advance knowledge about culture and society ('thinking with' the digital), while also taking up the digital as a substantive critical topic ('thinking through' the digital)."
 
-* [Website](https://warwick.ac.uk/fac/cross_fac/cdi/)
-* [Twitter @digital_inquiry](https://twitter.com/digital_inquiry)
-* [Microsoft Teams](https://teams.microsoft.com/l/channel/19%3anrDtNpD6m9tJVJaYHpgskC1FfzUXWMelqMpyYtg48Pk1%40thread.tacv2/General?groupId=dfcf9921-c9a4-4a59-a1a7-3c6ff98820e6&tenantId=09bacfbd-47ef-4465-9265-3546f2eaf6bc)
+. . .
+
+-   [Website](https://warwick.ac.uk/fac/cross_fac/cdi/)
+-   [Twitter \@digital_inquiry](https://twitter.com/digital_inquiry)
+-   [Microsoft Teams](https://teams.microsoft.com/l/channel/19%3anrDtNpD6m9tJVJaYHpgskC1FfzUXWMelqMpyYtg48Pk1%40thread.tacv2/General?groupId=dfcf9921-c9a4-4a59-a1a7-3c6ff98820e6&tenantId=09bacfbd-47ef-4465-9265-3546f2eaf6bc)
 
 ## CDI
 
@@ -33,8 +38,6 @@ format:
 [Profile page](https://warwick.ac.uk/fac/cross_fac/cim/people/nathaniel-tkacz/)
 
 [N.Tkacz\@warwick.ac.uk](mailto:N.Tkacz@warwick.ac.uk){.email}
-
-
 :::
 
 ::: {.column width="50%"}
@@ -46,7 +49,6 @@ format:
 
 [Profile Page](https://warwick.ac.uk/fac/arts/scapvc/ccmps/staff/dr_carolina_bandinelli/)
 :::
-
 :::
 
 ## IDG Technology For Research
@@ -61,9 +63,7 @@ format:
 
 *Data Analytics, Platforms, Technologist*
 
-[@jamestripp_](https://twitter.com/jamestripp_)
-
-
+[\@jamestripp\_](https://twitter.com/jamestripp_)
 :::
 
 ::: {.column width="50%"}
@@ -75,39 +75,80 @@ format:
 
 *Geospatial Specialist*
 
-[@GodwinYeboah](https://twitter.com/GodwinYeboah)
+[\@GodwinYeboah](https://twitter.com/GodwinYeboah)
 :::
-
 :::
 
 ## Teaching
 
 [github.com/WarwickCDI](https://github.com/warwickcdi)
 
-* [QGIS - How to make a map for print and web](https://github.com/WarwickCDI/How-to-create-a-map-for-print-and-web-using-QGIS)
-* [Introductory social media analysis using R](https://github.com/WarwickCDI/workshop-introductory-social-media-analysis-R)
-* [Networks - a skills workshop](https://github.com/WarwickCDI/workshop-networks-a-skillsworkshop)
+-   [QGIS - How to make a map for print and web](https://github.com/WarwickCDI/How-to-create-a-map-for-print-and-web-using-QGIS)
+-   [Introductory social media analysis using R](https://github.com/WarwickCDI/workshop-introductory-social-media-analysis-R)
+-   [Networks - a skills workshop](https://github.com/WarwickCDI/workshop-networks-a-skillsworkshop)
 
-## Group task
+. . .
 
-* In groups of three or four
-* Consider '**What is a Digital Method**'?
-* Feedback to the main group in about 10 minutes
+Previous sessions
 
-## Digital Methods - APIs
+- [SQL workshop](https://github.com/jamestripp/qstep-sql)
+- [Social Media Data Analysis in R](https://github.com/jamestripp/qstep-socialmedia)
+- [QSTEP Inferential Statistics Workshop](https://github.com/jamestripp/qstep-workshops)
 
-* Query as method
+# Group task
 
-## Digital Methods - AI
+. . .
 
-* Turing Living with Machines
+-   Groups of four or five
 
-## Digital Methods - Distant reading
+. . .
 
-## Digital Methods - Digital Humanities
+-   Consider '**What is a Digital Method**'?
 
-## Wrap-up
+. . .
 
-* The CDI: 'digital research techniques and associated tools to advance knowledge'
-* IDG Technology for Research - Research Software Engineering team. Teaching and research.
-* The future. What digital methods are you interested in?
+-   Feedback to the main group in about 10 minutes
+
+# Digital Methods {background-color="#2780e3"}
+
+## APIs
+
+-   "Digital methods are techniques for the study of societal change and cultural condition with online data. They make use of available digital objects such as the hyperlink, tag, timestamp, like, share, retweet, and seek to learn from how the objects are treated by the methods built into the dominant devices online, such as Google Web Search and Facebook's Graph Search." @rogers2015
+
+. . .
+
+-   "This paper introduces the 4CAT Capture and Analysis Toolkit (4CAT), an open-source Web-based research tool. 4CAT can capture data from a variety of online sources (including Twitter, Telegram, Reddit, 4chan, 8kun, BitChute, Douban and Parler) and analyze them through analytical processors." @peeters2022 , [GitHub](https://github.com/digitalmethodsinitiative/4cat)
+
+## AI
+
+-   Living with machines. "The project brings together historians, data scientists, geographers, computational linguists, and curators to devise new methods in data science and artificial intelligence that can be applied to historical resources, producing tools and software to analyse digitised collections at scale." [project web site](https://livingwithmachines.ac.uk/)
+
+. . .
+
+-   Deep Learning
+
+    -   [Keras](https://keras.io/)
+    -   [HuggingFace](https://huggingface.co/)
+
+## Computational Programming
+
+-   Geospatial Analysis [GeoComputation with R](https://geocompr.robinlovelace.net/)
+-   Data Visualisation [Altair webiste](https://altair-viz.github.io/gallery/index.html), [ggplot2](https://r-graph-gallery.com/ggplot2-package.html)
+-   Data Science [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/), [R for Data Science](https://r4ds.had.co.nz/)
+-   Typical inferential statistics [Linear Regression tutorial](https://mlu-explain.github.io/linear-regression/)
+
+## Digital Humanities
+
+-   Distant reading. Distant reading is an approach in literary studies that applies computational methods to literary data, usually derived from large digital libraries, for the purposes of literary history and theory. [Wikipedia](https://en.wikipedia.org/wiki/Distant_reading), @moretti2013
+
+. . .
+
+-   Critical Digital Humanities. Can established humanities methods coexist with computational thinking? @dobson2019
+
+# Wrapping up{background-color="#2780e3"}
+
+-   'digital research techniques and associated tools to advance knowledge'
+-   IDG Technology for Research
+-   The future. What digital methods are you interested in?
+
+## References
